--- a/index.css
+++ b/index.css
@@ -102,7 +102,7 @@ a{
     width: 100%;
 }
 .said{
-    width: 340px;
+    width: 80%;
 }
 .info img{
     border-radius: 100%;
@@ -123,6 +123,7 @@ a{
     background-color: hsl(219, 30%, 18%);
     border-radius: 5px;
     padding: 15px;
+    width: 25%;
 }
 input{
     width: 350px;
